<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_regist_account"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zp.gossiptripe.main.personal.regist.RegistAccountActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/registHead"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/touxiang"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registHead"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/registUserName"
            style="@style/regist_text_item_styles"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/registUserName"/>

        <EditText
            android:id="@+id/registUserPassword"
            style="@style/regist_text_item_styles"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/registUserPassword"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/registUserPasswordAgain"
            style="@style/regist_text_item_styles"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/registUserPasswordAgain"
            android:inputType="textPassword"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/registPersonName"
            style="@style/regist_text_item_styles"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/registName"/>

        <TextView
            android:id="@+id/registBirthday"
            style="@style/regist_text_item_styles"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/registBithday"/>

        <TextView
            android:id="@+id/registProvince"
            style="@style/regist_text_item_styles"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/registProvince"/>

        <EditText
            android:id="@+id/registAddress"
            style="@style/regist_text_item_styles"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/registAddress"/>

        <EditText
            android:id="@+id/registOrganization"
            style="@style/regist_text_item_styles"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/registOrganization"/>

        <Button
            android:id="@+id/nextBt"
            style="@style/regist_next_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:text="@string/registNextButton"/>
    </LinearLayout>

</RelativeLayout>
