<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/person_login_guide_root"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/loginTitle"
        android:textSize="25sp"/>

    <RelativeLayout
        android:id="@+id/usernameRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTitle"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/usernameKey"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/personInfoBg"
            android:padding="10dp"
            android:text="@string/username"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/usernameValue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/usernameKey"

            android:padding="10dp"
            android:textSize="18sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/passwordRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameRoot"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/passwordKey"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/personInfoBg"
            android:padding="10dp"
            android:text="@string/password"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/passwordValue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/passwordKey"
            android:padding="10dp"
            android:textSize="18sp"
            android:inputType="textPassword"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/actionBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordRoot"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/loginBt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/loginBt"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/registAccount"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/loginBt"
            android:text="@string/registAccount"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/forgetPassword"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/registAccount"
            android:text="@string/forgetPassword"
            android:textSize="17sp"/>

    </RelativeLayout>

</RelativeLayout>