<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/person_info_set_root"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/personInfoBg">

    <LinearLayout
        android:id="@+id/personInfoSet"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/personHead"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/personAgeAndLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/personOrganization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/space"
        style="@style/person_info_item_styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personInfoSet"
        android:layout_marginTop="30dp"
        android:drawableStart="@mipmap/add"
        android:text="@string/space"/>

    <TextView
        android:id="@+id/integrate"
        style="@style/person_info_item_styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:layout_marginTop="1dp"
        android:drawableStart="@mipmap/add"
        android:text="@string/integral"/>

    <TextView
        android:id="@+id/rule"
        style="@style/person_info_item_styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/integrate"
        android:layout_marginTop="1dp"
        android:drawableStart="@mipmap/add"
        android:text="@string/rule"/>

    <TextView
        android:id="@+id/logoff"
        style="@style/person_info_item_styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rule"
        android:layout_marginTop="1dp"
        android:drawableStart="@mipmap/clean"
        android:text="@string/logoff"/>

</RelativeLayout>